RESOLVED FIXED302713
REGRESSION(303073@main): Twitch pages crash after exiting fullscreen on iPad
https://bugs.webkit.org/show_bug.cgi?id=302713
Summary REGRESSION(303073@main): Twitch pages crash after exiting fullscreen on iPad
Antoine Quint
Reported 2025-11-18 08:02:29 PST
If you play a twitch video on iPad, the web process will crash if you exit fullscreen.
Attachments
Antoine Quint
Comment 1 2025-11-18 08:02:45 PST
Antoine Quint
Comment 2 2025-11-18 08:20:45 PST
EWS
Comment 3 2025-11-18 22:38:26 PST
Committed 303234@main (48e68eb17fb7): <https://commits.webkit.org/303234@main> Reviewed commits have been landed. Closing PR #54108 and removing active labels.
Michael Catanzaro
Comment 4 2025-11-25 07:39:04 PST
*** Bug 303057 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.